--- a/veterinarianApp/veterinarianApp/src/main/resources/application.properties
+++ b/veterinarianApp/veterinarianApp/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9393
+
 spring.datasource.url=jdbc:mysql://localhost:2644/vet?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
