--- a/Java Projects/veterinarianApp/src/main/resources/application.properties
+++ b/Java Projects/veterinarianApp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9393
 
-spring.datasource.url=jdbc:mysql://localhost:2644/vet?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/vet?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql123
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
