--- a/mavidev/mavidevBackend/mavidevBackend/src/main/resources/application.properties
+++ b/mavidev/mavidevBackend/mavidevBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=3040
 
-spring.datasource.url=jdbc:mysql://localhost:3306/vet?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mavidev?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=mysql123
 
@@ -11,4 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
 
